quick fix of title and some meta tags

--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>New Project</title>
-		<link rel="canonical" href="https://www.newproject.com">
-        <meta property="site_name" content="New Project">
-    	<meta property="title" content="New Project">
-    	<meta property="url" content="https://www.newproject.com">
+		<title>First AngularJS Project</title>
+        <meta property="site_name" content="First AngularJS Project">
+    	<meta property="title" content="First AngularJS Project">
+    	<meta property="url" content="https://https://andys1988.github.io/first-angularJS-app/">
 	    <meta property="type" content="website">
-	    <meta property="description" content="tba">
-		<meta name="keywords" content="tba">
+	    <meta property="description" content="Firts AngularJS project. User can control the style of the website. Either by typing keywords into the inputs or by enabling voice recognition control">
+		<meta name="keywords" content="AngularJS, Bootsrap, User controlled styles, style, voice control, watson, speach to text">
 		<meta name="author" content="Andrea Spaska-Cox" />
 		
 		<!-- Bootsrap -->
